--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^5.81.5",
     "@trpc/client": "^11.4.3",
     "@trpc/react-query": "^11.4.3",
+    "hono": "^4.8.3",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
     "react": "^19.0.0",
