--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^19.0.0",
     "react-native": "^0.80.1",
     "react-native-web": "^0.20.0",
-    "superjson": "^2.2.2"
+    "superjson": "^2.2.2",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
